--- a/sites/all/themes/mukurtu_starter/less/content.less
+++ b/sites/all/themes/mukurtu_starter/less/content.less
@@ -1082,24 +1082,45 @@ a.tooltips span {
     padding-bottom: 20px;
 }
 
-.node-person .field-name-field-node-aggregate {
-    clear: both;
-    padding-top: 30px;
+.node-person {
+   .field-name-field-node-aggregate {
+      clear: both;
+      padding-top: 30px;
+   }
+
+   .field-name-field-related-people {
+      clear: both;
+   }
+
+   .paragraphs-item-person-relationship-bundle {
+      clear: both;
+   }
+
+   .paragraphs-items-field-sections {
+      clear: both;
+      padding-bottom: 30px;
+   }
+
+   .view-mukurtu-records-referenced-content {
+     padding-top: 10px;
+   }
+
+   .tableofcontents {
+      clear: both;
+      padding-bottom: 30px;
+      font-weight: bold;
+   }
+
+   .owl-nav .owl-prev, .owl-nav .owl-next {
+      color: #337ab7;
+   }
+
+   .owl-next {
+      float: right;
+      text-align: center;
+   }
 }
 
-.node-person .field-name-field-related-people {
-    clear: both;
-}
-
-.node-person .paragraphs-item-person-relationship-bundle {
-    clear: both;
-}
-
-.node-person .tableofcontents {
-    clear: both;
-    padding-bottom: 30px;
-    font-weight: bold;
-}
 
 // Taxonomy Records
 .view-mode-taxonomy_record_teaser {
